hphp/hack/test/typecheck/require_strict.php.exp
File "require_strict.php", line 2, characters 1-25:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
