hphp/hack/test/typecheck/require_strict.php
<?hh // strict
echo(require('baz.php'));
